--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   get: ^4.6.5
   mysql_client: ^0.0.27
   flutter_svg: ^2.0.5
+  intl:
 dev_dependencies:
   flutter_test:
     sdk: flutter
