--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,9 @@ dependencies:
   get: ^4.6.5
   mysql_client: ^0.0.27
   flutter_svg: ^2.0.5
-  intl:
+  get_storage: ^2.1.1
+  intl: ^0.18.1
+  path_provider: ^2.0.15
 dev_dependencies:
   flutter_test:
     sdk: flutter
