--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   get_storage: ^2.1.1
   intl: ^0.18.1
   path_provider: ^2.0.15
+  expandable: ^5.0.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
